--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site Refugiadas</title>
 </head>
-    
-  <body>  
-<section>    
-<div class="navbar">
+   
+  <body>
+      <body onload="time()">
+<div id="txt"></div>    
+    </body>   
+       <script src="script.js"></script>
+<section>
+ <div class="navbar">
         <nav>
             <ul>
                 <li><a href="#">Login</a></li>
@@ -45,19 +49,19 @@
     <section>
         <ul>
             <li>
-                <img src="casarefugiada.jpg" width="420">
+                <img class="img" src="casarefugiada.jpg" width="420">
                 <p>Portugal, Bragança<br> 
                     115.9 m², três quartos, disponibilidade para ajudar<br> nas tarefas domésticas de vez em quando...  </p>
                     <button>Escolha essa casa</button>
             </li>
             <li>
-                <img src="casarefugiada2.jpg" width="350">
+                <img class="img" src="casarefugiada2.jpg" width="350">
                 <p>Brasil, São Paulo, Santos<br>
                     Mesmo quarto para mãe e filho(a) (se tiver),<br> casa pequena mas com uma família aconchegante...</p> 
                     <br><button class="button2">Escolha essa casa</button>
             </li>
                 <li>
-                    <img src="casa3.png" width="350">
+                    <img class="img" src="casa3.png" width="350">
                     <p>Estados Unidos, Michigan, Detroit<br>
                         Quartos separados para mãe e filhos, casa com um <br>lindo quintal, tempo máximo de acolhimento de 1 ano... </p>
                         <button>Escolha essa casa</button>
